--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev":
       "AWS_PROFILE=personal nodemon --ignore dist --ext js,ts,json --exec \"'ts-node' src/index.ts | bunyan\"",
     "start": "AWS_PROFILE=personal node ./dist",
+    "start:production": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write 'src/**/*.ts'",
     "precommit": "lint-staged"
