--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --ignore dist --ext js,ts,json --exec \"'ts-node' src/index.ts | bunyan\"",
+    "dev": "NODE_ENV=development nodemon --ignore dist --ext js,ts,json --exec \"'ts-node' src/index.ts | bunyan\"",
     "start": "node ./dist",
     "start:production": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
